<resources>

    <!-- main  -->
    <string name="app_name">Playlist Maker</string>
    <string name="app_search">Поиск</string>
    <string name="app_library">Медиатека</string>
    <string name="app_settings">Настройки</string>
    <!-- Search  -->
    <string name="error_not_found">Ничего не нашлось</string>
    <string name="update">Обновить</string>
    <string name="error_not_internet">Проблемы со связью \n\n Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="download_failed">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="you_searched">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="search_go">Поиск</string>
    <!-- Player  -->
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="rf">Россия</string>
    <string name="null_time" translatable="false">0:00</string>
    <!-- Setting  -->
    <string name="app_dark_style">Темная тема</string>
    <string name="share_text">Поделиться приложением</string>
    <string name="app_share">Поделиться приложением</string>
    <string name="app_mail_support">Написать в поддержку</string>
    <string name="user_licence">Пользовательское соглашение</string>
    <string name="course_url_string">https://practicum.yandex.ru/android-developer/?from=catalog</string>
    <string name="extra_subject_string">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="extra_text_string">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="oferta_url_string">https://yandex.ru/legal/practicum_offer/</string>
    <string name="student_email">aleksandor1203@yandex.ru</string>
    <!-- Mediateca  -->
    <string name="mediateca">Медиатека</string>
    <string name="empty_library">Ваша медиатека пуста</string>
    <string name="you_are_not_create">Вы не создали
        \nни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="favorit_tracks">Избранные песни</string>
    <string name="playlists">Плейлисты</string>
    <string name="name_playlist">Название*</string>
    <string name="descript_playlist">Описание</string>
    <string name="create">Создать</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="title_dialog_new_playlist">Завершить создание плейлиста?</string>
    <string name="message_dialog_new_playlist">Все несохраненные данные будут потеряны</string>
    <string name="cancel_button">Отмена</string>
    <string name="finish_button">Завершить</string>
    <string name="no_track_in_playlist">В этом плейлисте еще нет треков</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="really_delete_playlist">Хотите удалить этот плейлист?</string>
    <string name="no">Нет</string>
    <string name="yes">Да</string>
    <string name="update_info">Редактировать информацию</string>
    <string name="share">Поделиться</string>
    <string name="save">Сохранить</string>
    <string name="edit">Редактировать</string>
    <string name="track">трек</string>
    <string name="tracks_2">трека</string>
    <string name="tracks">трэков</string>
    <string name="minutes">минут</string>
    <string name="minutes_2">минуты</string>
    <string name="minute">минута</string>
    <string name="playlist">Плэйлист</string>
    <string name="delete_button">Удалить</string>
    <string name="delete_track">Удалить трэк</string>
    <string name="really_delete_track"> Вы уверены, что хотите удалить трек из плейлиста?</string>
    <string name="no_track_to_share">В этом плейлисте нет треков чтобы поделиться</string>
    <string name="its_clear">Понятно</string>

</resources>