<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/SettingBackgroundStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="2dp"
    tools:context=".setting.ui.SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="vertical">

        <TextView
            style="@style/SettingTextVievStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|start"
            android:fontFamily="@font/ys_display_medium"
            android:paddingTop="10dp"
            android:paddingStart="10dp"
            android:text="@string/app_settings"
            android:textAllCaps="false"
            android:textFontWeight="500"
            android:textSize="22sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/themeSw"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="start"
            android:layout_marginHorizontal="12dp"
            android:text="@string/app_dark_style"
            android:textSize="16sp"
            app:thumbTint="@color/thumb_tint"
            app:trackTint="@color/track_tint" />

        <Button
            android:id="@+id/shareBtm"
            style="@style/SettingBottomStyle"
            android:text="@string/app_share"
            app:icon="@drawable/share" />

        <Button
            android:id="@+id/supportBtm"
            style="@style/SettingBottomStyle"
            android:text="@string/app_mail_support"
            app:icon="@drawable/support" />

        <Button
            android:id="@+id/licenceBtm"
            style="@style/SettingBottomStyle"
            android:text="@string/user_licence"
            app:icon="@drawable/arrow_forward" />

    </LinearLayout>

</LinearLayout>