<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity"
    style="@style/SettingBackgroundStyle"
    android:orientation="vertical"
    android:padding="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp">

            <Button
                style="@style/SettingBackgroundStyle"
                android:id="@+id/backSettings"
                android:layout_width="48dp"
                android:layout_height="match_parent"
                app:icon="@drawable/arrow_back"
                android:paddingLeft="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:text="@string/app_settings"
                android:paddingStart="10dp"
                style="@style/SettingTextVievStyle"
                android:textAllCaps="false"
                android:textSize="22sp"
                android:textStyle="bold"
                android:fontFamily="@font/ys_display_medium"
                android:textFontWeight="500" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_setting_layout_height"
                android:layout_marginTop="20dp"
                android:gravity="start"
                android:orientation="horizontal"
                android:paddingLeft="12dp">

                <TextView
                    style="@style/SettingSwitchTextStyle"
                    android:text="@string/app_dark_style" />

                <Switch
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center" />
            </FrameLayout>

            <Button
                android:id="@+id/shareBtm"
                android:text="@string/app_share"
                style="@style/SettingBottomStyle"
                app:icon="@drawable/share" />

            <Button
                android:id="@+id/supportBtm"
                android:text="@string/app_mail_support"
                style="@style/SettingBottomStyle"
                app:icon="@drawable/support" />

            <Button
                android:id="@+id/licenceBtm"
                android:text="@string/user_licence"
                style="@style/SettingBottomStyle"
                app:icon="@drawable/arrow_forward" />

        </LinearLayout>

</LinearLayout>