<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#3772E7"
    android:padding="20dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="20sp" />


    </FrameLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="33dp"
        android:orientation="vertical"
        android:layout_weight="1">

        <Button
            android:id="@+id/searchB"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:backgroundTint="@android:color/white"
            android:text="@string/app_search"
            android:textSize="20sp"
            android:textColor="@color/black"
            app:cornerRadius="20dp"
            app:iconTint="@color/black"
            app:icon="@drawable/search"
            app:iconGravity="textStart"
            android:textAllCaps="false"
            />


        <Button
            android:id="@+id/libraryB"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:backgroundTint="@android:color/white"
            android:text="@string/app_library"
            android:textSize="20sp"
            android:textColor="@color/black"
            app:cornerRadius="20dp"
            app:iconTint="@color/black"
            app:icon="@drawable/library"
            app:iconGravity="textStart"
            android:textAllCaps="false"
            />

        <Button
            android:id="@+id/settingB"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:backgroundTint="@android:color/white"
            android:text="@string/app_settings"
            android:textSize="20sp"
            android:textColor="@color/black"
            app:cornerRadius="20dp"
            app:iconTint="@color/black"
            app:icon="@drawable/settings"
            app:iconGravity="textStart"
            android:textAllCaps="false"
            />

    </LinearLayout>
</LinearLayout>